...
                style = NoturaTheme.typography.smallLink.copy(color = NoturaTheme.colors.mutedLink),
            )
        }
    }
}

const val SIGN_IN_SCREEN_TAG = "sign-in-screen"
const val SIGN_UP_LINK_TAG = "sign-up-link"

